src/components/Navbar/style.css
#left-bar {
  height: calc(100vh - 5rem)!important;
}

#left-toggle-open {
  height: calc(100vh - 5rem)!important;
}

.push-right-nav-open {
  left: 16rem;
  width: calc(100vw - 17.25rem)!important;
}

.push-right-nav-closed {
  left: 1.25rem;
  width: calc(100vw - 2.5rem)!important;
}

.push-down {
  top: 78px;
}

.left-toggle-icon {
  -webkit-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  position: absolute;
  top: 50%;
  left: 50%;
}


@media screen and (max-width: 1024px) {
  #menu-options {
    display: none;
  }
}

@media screen and (max-width: 640px) {
  .my-block {
    display: block !important;
  }

  #left-toggle-open{
    display: none !important;
  }

  .push-right-nav-open {
    left: 0;
    width: 100vw!important;
  }
  
  .push-right-nav-closed {
    left: 0;
    width: 100vw!important;
  }
}

